--- a/GameTLBB.html
+++ b/GameTLBB.html
@@ -27,7 +27,7 @@
     }
  
     if (browser.versions.ios || browser.versions.iPhone) {
-        window.location="itms-services:///?action=download-manifest&url="; // ios版本的下载地址
+        window.location="itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/XXSlipper/testdownload/main/GameTLBB.plist"; // ios版本的下载地址
         console.log("ios平台");
     }
     else if (browser.versions.android) {
